--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,3 @@
-<h1>
-  Task Mate App
-</h1>
+<div class="d-flex justify-content-center align-items-center vh-100">
+  <h1 class="text-center">Task Mate App</h1>
+</div>
