--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,12 +11,12 @@
 
       <div class="form-group">
         <%= f.label :Last_name, class: "form-label" %><br />
-        <%= f.text_field :last_name, autofocus: true, class: "form-control", placeholder: "Your last name" %>
+        <%= f.text_field :last_name, class: "form-control", placeholder: "Your last name" %>
       </div>
 
       <div class="form-group">
         <%= f.label :email, class: "form-label" %>
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Enter your email" %>
+        <%= f.email_field :email, autocomplete: "email", class: "form-control", placeholder: "Enter your email" %>
       </div>
 
       <div class="form-group">
