Add static/mock UI look and feel prior starting creating controllers and views for teams and tickets

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,62 @@
-<div class="d-flex justify-content-center align-items-center vh-100">
-  <h1 class="text-center">Task Mate App</h1>
+<div class="container mt-5">
+  <div class="row mb-4">
+    <div class="col">
+      <label for="team-select" class="form-label">Teams:</label>
+      <select id="team-select" class="form-select">
+        <option value="1" selected>Team Alpha</option>
+        <option value="2">Team Bravo</option>
+        <option value="3">Team Charlie</option>
+        <option value="4">Team Delta</option>
+      </select>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3 col-sm-6 mb-3" style="background-color: #F4F5F7;">
+      <h5 style="font-weight: normal;">TO DO</h5>
+      <div class="card mb-3">
+        <div class="card-body" style="box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);">
+          <h5 class="card-title">ABC-1</h5>
+          <p class="card-text">Sample ticket in ToDo</p>
+          <p class="card-text"><small class="text-muted">Assignee: Leo</small></p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3 col-sm-6 mb-3" style="background-color: #F4F5F7;">
+      <h5 style="font-weight: normal;">IN PROGRESS</h5>
+      <div class="card mb-3">
+        <div class="card-body" style="box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);">
+          <h5 class="card-title">ABC-2</h5>
+          <p class="card-text">Sample ticket in Progress</p>
+          <p class="card-text"><small class="text-muted">Assignee: Leo</small></p>
+        </div>
+      </div>
+      <div class="card mb-3">
+        <div class="card-body" style="box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);">
+          <h5 class="card-title">ABC-3</h5>
+          <p class="card-text">(2) Sample ticket in Progress</p>
+          <p class="card-text"><small class="text-muted">Assignee: Gabriel</small></p>
+        </div>
+      </div>
+      <div class="card mb-3">
+        <div class="card-body" style="box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);">
+          <h5 class="card-title">ABC-3</h5>
+          <p class="card-text">(2) Sample ticket in Progress</p>
+          <p class="card-text"><small class="text-muted">Assignee: Gabriel</small></p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3 col-sm-6 mb-3" style="background-color: #F4F5F7;">
+      <h5 style="font-weight: normal;">REVIEW</h5>
+    </div>
+    <div class="col-md-3 col-sm-6 mb-3" style="background-color: #F4F5F7;">
+      <h5 style="font-weight: normal;">DONE</h5>
+      <div class="card mb-3">
+        <div class="card-body" style="box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);">
+          <h5 class="card-title">ABC-4</h5>
+          <p class="card-text">Sample ticket completed</p>
+          <p class="card-text"><small class="text-muted">Assignee: Zuly</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
