--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,7 @@
 <% if current_user.no_teams_assigned? %>
   <div class="container mt-5">
     <div class="card">
-      <div class="card-header">
+      <div class="card-header bg-primary text-white">
         <h3>No Teams Assigned</h3>
       </div>
       <div class="card-body">
@@ -12,7 +12,7 @@
 <% else %>
   <div class="container mt-5">
     <div class="card">
-      <div class="card-header">
+      <div class="card-header bg-primary text-white">
         <h3>Your Teams</h3>
       </div>
       <div class="card-body">
