--- a/app/views/teams/tickets.html.erb
+++ b/app/views/teams/tickets.html.erb
@@ -1,49 +1,69 @@
-<div class="container">
-  <h2 style="margin-bottom: 20px;">Team: <%= @team.name %> (Total: <%= @tickets.count %> tickets)</h2>
-  <div class="row">
-    <div class="col-md-3">
-      <h3>TO DO</h3>
-      <% @tickets_to_do.each do |ticket| %>
-        <div class="card mb-2">
-          <div class="card-body" style="height: 150px;">
-            <h5 class="card-title"><%= truncate(ticket.title, length: 40, omission: "...") %></h5>
-            <p class="card-text"><%= ticket.assignee_name %></p>
-          </div>
+<div class="container mt-5">
+  <div class="card">
+    <div class="card-header bg-primary text-white">
+      <div class="d-flex justify-content-between align-items-center">
+        <h2>
+          Team: <%= @team.name %>
+          <span style="font-size: smaller;">
+            <% if @team.tickets.count == 0 %>
+              No tickets
+            <% else %>
+              (<%= @team.tickets.count %> <%= @team.tickets.count == 1 ? "ticket" : "tickets" %> in total)
+            <% end %>
+          </span>
+        </h2>
+        <div>
+          <a class="btn btn-secondary" href="<%= root_path %>">Select other team</a>
         </div>
-      <% end %>
+      </div>
     </div>
-    <div class="col-md-3">
-      <h3>IN PROGRESS</h3>
-      <% @tickets_in_progress.each do |ticket| %>
-        <div class="card mb-2">
-          <div class="card-body" style="height: 150px;">
-            <h5 class="card-title"><%= truncate(ticket.title, length: 40, omission: "...") %></h5>
-            <p class="card-text"><%= ticket.assignee_name %></p>
-          </div>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-md-3">
+          <h3 class="text-center text-info">TO DO</h3>
+          <% @tickets_to_do.each do |ticket| %>
+            <div class="card mb-3 shadow-sm">
+              <div class="card-body" style="height: 150px;">
+                <h5 class="card-title"><%= truncate(ticket.title, length: 40, omission: "...") %></h5>
+                <p class="card-text"><%= ticket.assignee_name %></p>
+              </div>
+            </div>
+          <% end %>
         </div>
-      <% end %>
-    </div>
-    <div class="col-md-3">
-      <h3>REVIEW</h3>
-      <% @tickets_review.each do |ticket| %>
-        <div class="card mb-2">
-          <div class="card-body" style="height: 150px;">
-            <h5 class="card-title"><%= truncate(ticket.title, length: 40, omission: "...") %></h5>
-            <p class="card-text"><%= ticket.assignee_name %></p>
-          </div>
+        <div class="col-md-3">
+          <h3 class="text-center text-warning">IN PROGRESS</h3>
+          <% @tickets_in_progress.each do |ticket| %>
+            <div class="card mb-3 shadow-sm">
+              <div class="card-body" style="height: 150px;">
+                <h5 class="card-title"><%= truncate(ticket.title, length: 40, omission: "...") %></h5>
+                <p class="card-text"><%= ticket.assignee_name %></p>
+              </div>
+            </div>
+          <% end %>
         </div>
-      <% end %>
-    </div>
-    <div class="col-md-3">
-      <h3>DONE</h3>
-      <% @tickets_done.each do |ticket| %>
-        <div class="card mb-2">
-          <div class="card-body" style="height: 150px;">
-            <h5 class="card-title"><%= truncate(ticket.title, length: 40, omission: "...") %></h5>
-            <p class="card-text"><%= ticket.assignee_name %></p>
-          </div>
+        <div class="col-md-3">
+          <h3 class="text-center text-primary">REVIEW</h3>
+          <% @tickets_review.each do |ticket| %>
+            <div class="card mb-3 shadow-sm">
+              <div class="card-body" style="height: 150px;">
+                <h5 class="card-title"><%= truncate(ticket.title, length: 40, omission: "...") %></h5>
+                <p class="card-text"><%= ticket.assignee_name %></p>
+              </div>
+            </div>
+          <% end %>
         </div>
-      <% end %>
+        <div class="col-md-3">
+          <h3 class="text-center text-success">DONE</h3>
+          <% @tickets_done.each do |ticket| %>
+            <div class="card mb-3 shadow-sm">
+              <div class="card-body" style="height: 150px;">
+                <h5 class="card-title"><%= truncate(ticket.title, length: 40, omission: "...") %></h5>
+                <p class="card-text"><%= ticket.assignee_name %></p>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      </div>
     </div>
   </div>
 </div>
