--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title><%= content_for(:title) || "Task Mate" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -25,7 +25,7 @@
   <body>
     <% if user_signed_in? %>
       <div class="d-flex justify-content-end align-items-center p-2">
-        <p class="mb-0 mr-2"><b>Logged in as:</b> <i><%= current_user.email %> (<%= current_user.friendly_name %>)</i>,</p>
+        <p class="mb-0 mr-2"><b>Logged in as:</b> <i><%= current_user.friendly_name %></i>,</p>
         <%= button_to 'Logout', destroy_user_session_path, method: :delete, class: 'btn btn-link p-0' %>
       </div>
     <% end %>
