--- a/app/views/tickets/edit.html.erb
+++ b/app/views/tickets/edit.html.erb
@@ -6,6 +6,10 @@
     <div class="card-body">
       <%= form_for(@ticket) do |f| %>
         <div class="form-group">
+          <%= f.label :assignee_id, class: "form-label" %>
+          <%= f.collection_select :assignee_id, @assignees, :id, :friendly_name, { prompt: "Select Assignee" }, class: "form-control" %>
+        </div>
+        <div class="form-group">
           <%= f.label :title, class: "form-label" %>
           <%= f.text_field :title, class: "form-control" %>
         </div>
