--- a/app/views/tickets/view.html.erb
+++ b/app/views/tickets/view.html.erb
@@ -10,8 +10,8 @@
     </div>
     <div class="card-body">
       <div class="row">
-        <div class="col-md-3">
-          <p class="card-text"><strong>Assignee:</strong> <%= @ticket.assignee.friendly_name %></p>
+        <div class="col-md-4">
+          <p class="card-text"><strong>Assignee:</strong> <%= @ticket.assignee_name %></p>
           <p class="card-text"><strong>Due date:</strong> <%= @ticket.due_date %></p>
           <p class="card-text"><strong>Priority:</strong> <%= @ticket.human_readable_priority %></p>
           <p class="card-text"><strong>Status:</strong> <%= @ticket.human_readable_status %></p>
