--- a/app/views/tickets/edit.html.erb
+++ b/app/views/tickets/edit.html.erb
@@ -7,7 +7,15 @@
       <%= form_for(@ticket) do |f| %>
         <div class="form-group">
           <%= f.label :assignee_id, class: "form-label" %>
-          <%= f.collection_select :assignee_id, @assignees, :id, :friendly_name, { prompt: "Select Assignee" }, class: "form-control" %>
+          <%= f.collection_select :assignee_id, @assignees, :id, :friendly_name, { prompt: "Select Assignee" },
+                                  class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :priority, class: "form-label" %>
+          <%= f.select :priority,
+                       TicketsController::TICKET_PRIORITY_OPTIONS_FOR_SELECTION.map { |id, name| [name, id] },
+                       { prompt: "Select Priority" },
+                       class: "form-control" %>
         </div>
         <div class="form-group">
           <%= f.label :title, class: "form-label" %>
