--- a/app/views/tickets/edit.html.erb
+++ b/app/views/tickets/edit.html.erb
@@ -10,20 +10,8 @@
           <%= f.collection_select :assignee_id, @assignees, :id, :friendly_name, { prompt: "Select Assignee" },
                                   class: "form-control" %>
         </div>
-        <div class="form-group">
-          <%= f.label :priority, class: "form-label" %>
-          <%= f.select :priority,
-                       TicketsController::TICKET_PRIORITY_OPTIONS_FOR_SELECTION.map { |id, name| [name, id] },
-                       { prompt: "Select Priority" },
-                       class: "form-control" %>
-        </div>
-        <div class="form-group">
-          <%= f.label :status, class: "form-label" %>
-          <%= f.select :status,
-                       TicketsController::TICKET_STATUS_OPTIONS_FOR_SELECTION.map { |id, name| [name, id] },
-                       { prompt: "Select Status" },
-                       class: "form-control" %>
-        </div>
+        <%= form_group_select(f, :priority, TicketsController::TICKET_PRIORITY_OPTIONS_FOR_SELECTION, "Select Priority") %>
+        <%= form_group_select(f, :status, TicketsController::TICKET_STATUS_OPTIONS_FOR_SELECTION, "Select Status") %>
         <div class="form-group">
           <%= f.label :title, class: "form-label" %>
           <%= f.text_field :title, class: "form-control" %>
