--- a/app/views/teams/tickets.html.erb
+++ b/app/views/teams/tickets.html.erb
@@ -28,7 +28,7 @@
                   <h5 class="card-title"><%= truncate(ticket.title, length: @ticket_title_truncate_length, omission: "...") %></h5>
                   <p class="card-text">Assignee: <%= ticket.assignee_name %></p>
                   <p class="card-text" style="font-size: smaller; margin-top: -10px;">Due
-                    date: <%= ticket.due_date %></p>
+                    date: <%= ticket.due_date %> <%= ticket.due_date < Date.today ? "&#128680;".html_safe : "" %></p>
                   <p class="card-text" style="font-size: smaller; margin-top: -10px;">
                     <%= content_tag(:span, ticket.priority_emoticon.html_safe, title: ticket.human_readable_priority + " Priority ") %>
                   </p>
@@ -46,7 +46,7 @@
                   <h5 class="card-title"><%= truncate(ticket.title, length: @ticket_title_truncate_length, omission: "...") %></h5>
                   <p class="card-text">Assignee: <%= ticket.assignee_name %></p>
                   <p class="card-text" style="font-size: smaller; margin-top: -10px;">Due
-                    date: <%= ticket.due_date %></p>
+                    date: <%= ticket.due_date %> <%= ticket.due_date < Date.today ? "&#128680;".html_safe : "" %></p>
                   <p class="card-text" style="font-size: smaller; margin-top: -10px;">
                     <%= content_tag(:span, ticket.priority_emoticon.html_safe, title: ticket.human_readable_priority + " Priority ") %>
                   </p>
@@ -64,7 +64,7 @@
                   <h5 class="card-title"><%= truncate(ticket.title, length: @ticket_title_truncate_length, omission: "...") %></h5>
                   <p class="card-text">Assignee: <%= ticket.assignee_name %></p>
                   <p class="card-text" style="font-size: smaller; margin-top: -10px;">Due
-                    date: <%= ticket.due_date %></p>
+                    date: <%= ticket.due_date %> <%= ticket.due_date < Date.today ? "&#128680;".html_safe : "" %></p>
                   <p class="card-text" style="font-size: smaller; margin-top: -10px;">
                     <%= content_tag(:span, ticket.priority_emoticon.html_safe, title: ticket.human_readable_priority + " Priority ") %>
                   </p>
@@ -82,7 +82,7 @@
                   <h5 class="card-title"><%= truncate(ticket.title, length: @ticket_title_truncate_length, omission: "...") %></h5>
                   <p class="card-text">Assignee: <%= ticket.assignee_name %></p>
                   <p class="card-text" style="font-size: smaller; margin-top: -10px;">Due
-                    date: <%= ticket.due_date %></p>
+                    date: <%= ticket.due_date %> <%= ticket.due_date < Date.today ? "&#128680;".html_safe : "" %></p>
                   <p class="card-text" style="font-size: smaller; margin-top: -10px;">
                     <%= content_tag(:span, ticket.priority_emoticon.html_safe, title: ticket.human_readable_priority + " Priority ") %>
                   </p>
