--- a/app/views/tickets/view.html.erb
+++ b/app/views/tickets/view.html.erb
@@ -12,7 +12,7 @@
       <div class="row">
         <div class="col-md-4">
           <p class="card-text"><strong>Assignee:</strong> <%= @ticket.assignee_name %></p>
-          <p class="card-text"><strong>Due date:</strong> <%= @ticket.due_date %></p>
+          <p class="card-text"><strong>Due date:</strong> <%= @ticket.due_date %> <%= @ticket.due_date < Date.today ? "&#128680;".html_safe : "" %></p>
           <p class="card-text"><strong>Priority:</strong> <%= @ticket.human_readable_priority %></p>
           <p class="card-text"><strong>Status:</strong> <%= @ticket.human_readable_status %></p>
           <a class="btn btn-primary" href="<%= ticket_edit_path(@ticket) %>">Edit</a>
