Add ability to create new tickets from teams page

--- a/app/views/teams/tickets.html.erb
+++ b/app/views/teams/tickets.html.erb
@@ -13,6 +13,7 @@
           </span>
         </h2>
         <div>
+          <a class="btn btn-info" href="<%= new_ticket_path %>">Create new ticket</a>
           <a class="btn btn-secondary" href="<%= root_path %>">Select other team</a>
         </div>
       </div>
