Use pundit's teams policy for user authorization to teams ticket

--- a/app/views/teams/tickets.html.erb
+++ b/app/views/teams/tickets.html.erb
@@ -6,7 +6,7 @@
           Team: <%= @team.name %>
           <span style="font-size: smaller;">
             <% if @team.tickets.count == 0 %>
-              No tickets
+              (No tickets)
             <% else %>
               (<%= @team.tickets.count %> <%= @team.tickets.count == 1 ? "ticket" : "tickets" %> in total)
             <% end %>
