--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -27,7 +27,7 @@
           <% current_user.teams.each do |team| %>
             <li class="list-group-item">
               <a href="<%= team_tickets_path(team_id: team.id) %>">
-                <%= team.name %> - <%= team.description %>
+                <%= team.name %>: <%= truncate(team.description, length: 90, omission: "...") %>
                 <% if policy(team).edit? %>
                   <a href="<%= team_edit_path(team_id: team.id) %>" class="btn btn-primary float-right">Edit team</a>
                 <% end %>
