--- a/app/views/tickets/view.html.erb
+++ b/app/views/tickets/view.html.erb
@@ -17,7 +17,14 @@
           <p class="card-text"><strong>Priority:</strong> <%= @ticket.human_readable_priority %></p>
           <p class="card-text"><strong>Status:</strong> <%= @ticket.human_readable_status %></p>
           <% if policy(@ticket).edit? %>
-            <a class="btn btn-primary" href="<%= ticket_edit_path(@ticket) %>">Edit</a>
+            <div class="mb-2">
+              <%= link_to "Edit", ticket_edit_path(@ticket), class: "btn btn-primary btn-same-size" %>
+            </div>
+          <% end %>
+          <% if policy(@ticket).destroy? %>
+            <div class="mb-2">
+              <%= link_to "Delete", ticket_destroy_path(@ticket), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "btn btn-danger btn-same-size" %>
+            </div>
           <% end %>
         </div>
         <div class="col-md-8">
