--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -28,8 +28,11 @@
             <li class="list-group-item">
               <a href="<%= team_tickets_path(team_id: team.id) %>">
                 <%= team.name %>: <%= truncate(team.description, length: 90, omission: "...") %>
+                <% if policy(team).destroy? %>
+                  <%= link_to "Delete", team_destroy_path(team), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "btn btn-danger float-right ml-2" %>
+                <% end %>
                 <% if policy(team).edit? %>
-                  <a href="<%= team_edit_path(team_id: team.id) %>" class="btn btn-primary float-right">Edit team</a>
+                  <a href="<%= team_edit_path(team_id: team.id) %>" class="btn btn-primary float-right">Edit</a>
                 <% end %>
               </a>
             </li>
