--- a/app/views/tickets/view.html.erb
+++ b/app/views/tickets/view.html.erb
@@ -36,8 +36,14 @@
             <strong>Description</strong>
             <br /><%= @ticket.description %>
           </p>
-          <p class="card-text">
-            <strong>Comments</strong>
+          <div class="card-text">
+            <div class="d-flex justify-content-between align-items-center">
+              <strong>Comments</strong>
+              <% if policy(Comment).new? %>
+                <%= link_to "Add Comment", new_comment_path(id: @ticket.id), class: "btn btn-primary" %>
+              <% end %>
+            </div>
+            <br />
             <% if @ticket.has_comments? %>
               <ul class="list-group">
                 <% @ticket.comments_order_by_desc.each do |comment| %>
@@ -54,7 +60,7 @@
                 </small>
               </p>
             <% end %>
-          </p>
+          </div>
         </div>
       </div>
     </div>
