feat: use simple_format to include breaks if user enter multiple lines in comments

--- a/app/views/tickets/view.html.erb
+++ b/app/views/tickets/view.html.erb
@@ -54,7 +54,7 @@
                         <%= link_to "Edit", edit_comment_path(@ticket, comment) %>
                       <% end %>
                     </small>
-                    <br /><strong><%= comment.author.friendly_name %>:</strong> <%= comment.body %>
+                    <br /><strong><%= comment.author.friendly_name %>:</strong> <%= simple_format(comment.body) %>
                     <% if comment.edited? %>
                       <br />
                       <small>
