--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -11,6 +11,11 @@
         </div>
 
         <div class="form-group">
+          Code Identifier:
+          <%= f.text_field :code_identifier, class: "form-control", disabled: true %>
+        </div>
+
+        <div class="form-group">
           <%= f.label :description %>
           <%= f.text_area :description, class: "form-control" %>
         </div>
