--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -10,6 +10,10 @@
           <%= form.text_field :name, class: "form-control" %>
         </div>
         <div class="form-group">
+          <%= form.label :code_identifier, class: "form-label" %>
+          <%= form.text_field :code_identifier, class: "form-control", maxlength: 4 %>
+        </div>
+        <div class="form-group">
           <%= form.label :description, class: "form-label" %>
           <%= form.text_area :description, class: "form-control" %>
         </div>
