--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -35,6 +35,10 @@
                   <a href="<%= team_edit_path(team_id: team.id) %>" class="btn btn-primary float-right">Edit</a>
                 <% end %>
               </a>
+              <div>
+                Creator: <%= team.creator.friendly_name %><br>
+                Owner: <%= team.owner.friendly_name %>
+              </div>
             </li>
           <% end %>
         </ul>
