feat: Introduce nav bar and add option to edit account

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,7 +9,7 @@
  * Consider organizing styles into separate files for maintainability.
  */
 body {
-    background-color: lightblue;
+    background-color: #e3f2fd;
 }
 
 .btn-same-size {
