--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,7 +13,7 @@
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <div class="form-group">
         <%= f.label :email, class: "form-label" %>
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Enter your email", disabled: true %>
+        <%= f.email_field :email, autocomplete: "email", class: "form-control", placeholder: "Enter your email", disabled: true %>
       </div>
 
       <div class="form-group">
@@ -22,7 +22,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.label :Last_name, class: "form-label" %><br />
+        <%= f.label :last_name, class: "form-label" %><br />
         <%= f.text_field :last_name, class: "form-control", placeholder: "Your last name", required: true %>
       </div>
 
