--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.label :Last_name, class: "form-label" %><br />
+        <%= f.label :last_name, class: "form-label" %><br />
         <%= f.text_field :last_name, class: "form-control", placeholder: "Your last name" %>
       </div>
 
