feat: Add cancel option in user edit view

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -47,5 +47,8 @@
         <%= f.submit "Update", class: "btn btn-primary btn-block" %>
       </div>
     <% end %>
+    <div class="text-center">
+      <%= link_to "Cancel", root_path, class: "btn btn-link" %>
+    </div>
   </div>
 </div>
